@@ -1,6 +1,14 @@
 /***********************************************************************
 X3 ChangeLog
 
+2009-05-31  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
+
+	* src/main.c: Added spamserv.h #include.
+
+	* src/main-common.c: Woops forgot to init spamserv.
+
+	* src/spamserv.c: Fixed up AddLocalUser.
+
 2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
 	* src/chanserv.c: Small fix with CSMSG_SET_UNREVIEWED.
